--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Streamdata Gallery
-url: aws-xray.api.streamdata.gallery
+title: Streamdata Gallery AWS X-Ray
+url: aws-xray.streamdata.gallery
 tag: AWS X-Ray
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery-organizations
+github_user: streamdata-gallery
 github_repo: aws-xray
 github_branch: master
 collections:
